Header offset makes adjustments for section heading. As well as made some larger viewport adjustments for text readability, as well as the feature background have a certain max height and preventing it from continually growing as it is a large resolution.

--- a/clientv2/styles/globals.css
+++ b/clientv2/styles/globals.css
@@ -4,10 +4,10 @@
 
 @layer base {
   html {
-    @apply scroll-smooth scroll-pt-[80px];
+    @apply scroll-smooth md:scroll-pt-[68px] text-white;
   }
   body {
-    @apply bg-black-secondary;
+    @apply bg-black-secondary text-dynamic-base;
   }
 }
 @layer utilities {
